--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kn-landuse-monitor-vue",
+  "name": "katastr-io-monitor-frontend",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "Land use monitor frontend",
   "author": "Michal Zimmermann <zimmicz@gmail.com>",
   "private": true,
   "scripts": {
@@ -10,11 +10,10 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "dexie": "^1.5.1",
+    "axios": "^0.15.3",
     "vue": "^2.0.1",
     "vue-d3": "^0.1.0",
-    "vuex": "^2.0.0",
-    "whatwg-fetch": "^2.0.1"
+    "vuex": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
