--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "leaflet": "^1.0.3",
+    "lodash": "^4.17.4",
     "vue": "^2.0.1",
     "vue-d3": "^0.1.0",
     "vue2-leaflet": "^0.0.31",
